# avoid-agent

./: .env.example  .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  avoid-agent-selfdev.service  backlog.md  justfile  pyproject.toml  selfdev-policy.yaml  supervisor.sh
.claude/: settings.json
avoid_agent/: __main__.py  learnings.py  learnings_analyzer.py  permissions.py  session.py
avoid_agent/agent/: context.py  runtime.py
avoid_agent/cli/: __init__.py  headless.py  selfdev.py  shared.py  tui.py
haikus/: haiku.md  haiku2.md
refined/: add-learnings-slash-command-to-tui-mode.md  add-self-improve-slash-command-to-tui-mode.md  add-webhook-notification-support.md  architectural-review.md  context-efficient-backpressure-bash.md  create-learnings-analyzer.md  create-sample-extension-file-search.md  create-session-learnings-capture-module.md  print-learnings-suggestions-at-selfdev-startup.md  wire-learnings-capture-into-headless-mode.md  write-selfdev-status-json.md
tests/: test_agent_runtime.py  test_anthropic_provider.py  test_bash_backpressure.py  test_hallucination_detection.py  test_headless.py  test_main_display.py  test_message_normalization.py  test_model_picker.py  test_model_switch.py  test_openai_codex_provider.py  test_provider_stop_reasons.py  test_selfdev_interactive.py  test_session_persistence.py  test_system_prompt.py  test_system_prompt_export.py  test_tool_validation.py  test_tui_clear.py  test_tui_exit_commands.py  test_tui_inflight_slash.py  test_tui_input_component.py  test_tui_key_debug.py  test_tui_keys.py  test_tui_terminal.py
(+46 files in other folders)
